Fix line spacing on recipe pages

--- a/css/style.css
+++ b/css/style.css
@@ -92,7 +92,7 @@
 .recipe ul, 
 .recipe ol {
     margin: 10px 0px;
-    line-height: 30px;
+    line-height: 22px;
     margin-bottom: 20px;
 }
 
@@ -107,7 +107,7 @@
 }
 
 li {
-    margin-bottom: 5px;
+    margin-bottom: 7px;
 }
 
 
